--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,6 +28,7 @@ import backgroundSecondary from "../assets/images/bg-2.png";
 		/>
 
 		<div id="sentence-typed" class="hidden">
+			<p>test</p>
 			<p>
 				I am a <strong> <span class="text-sky-300/90">Frontend</span> Developer</strong>
 			</p>
