--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,8 +10,9 @@ import backgroundSecondary from "../assets/images/bg-2.png";
 >
 	<main class="overflow-hidden">
 		<div class="w-8/12 md:w-6/12 mx-auto drop-shadow-[0px_35px_35px_rgba(39,245,231,0.8)]">
+			<h1>test</h1>
 			<h1 class="text-3xl md:text-4xl font-medium text-center pb-80 md:pb-0 md:mb-28 md:pr-20">
-				Hello 👋🏼,I am <span class="text-amber-500 font-semibold">Rendra</span> Andriansyah
+				Hello ,I am <span class="text-amber-500 font-semibold">Rendra</span> Andriansyah
 
 				<div class="text-base text-start w-10/12 mx-auto pt-4">
 					<span id="element"></span>
@@ -28,7 +29,6 @@ import backgroundSecondary from "../assets/images/bg-2.png";
 		/>
 
 		<div id="sentence-typed" class="hidden">
-			<p>test</p>
 			<p>
 				I am a <strong> <span class="text-sky-300/90">Frontend</span> Developer</strong>
 			</p>
