--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,7 @@ import { Icon } from "astro-icon";
 	seoDesc=`Hii There, I'm Rendra Andriansyah, as FrontendDeveloper I'm able to work with ReactJS, NextJS, VueJS, & Astro.`
 >
 	<div class="w-7/12 mx-auto">
-		<h1 class="text-center text-4xl font-semibold p-2">About Me</h1>
+		<h1 class="text-center text-4xl font-semibold p-2 underline underline-offset-8">About Me</h1>
 		<div class="flex lg:flex-row flex-col items-center gap-8">
 			<img
 				src={profile}
