--- a/src/layouts/MainHead.astro
+++ b/src/layouts/MainHead.astro
@@ -8,8 +8,8 @@ const { title, seoDesc } = Astro.props;
 	<SEO title={title} description={seoDesc} />
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="icon" type="svg" href="./src/assets/logo.svg" />
-	<link rel="preconnect" href={favicon} />
+	<link rel="icon" type="svg" href={favicon} />
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link
 		href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400&display=swap"
