--- a/src/pages/projects/[projects].astro
+++ b/src/pages/projects/[projects].astro
@@ -42,7 +42,7 @@ const { name, desc } = Astro.props;
 	<section class="mx-auto w-6/12">
 		<div class="flex justify-center">
 			<img
-				src=`../../assets/projects/${projects}.png`
+				src=`../src/assets/projects/${projects}.png`
 				width="500"
 				class="rounded min-w-36 shadow-xl drop-shadow-[10px_1px_65px_rgba(89,199,231,0.8)]"
 			/>
